Moved all models, vms,services into .core projects created card layout

--- a/MelbourneModernApps/App.xaml
+++ b/MelbourneModernApps/App.xaml
@@ -7,5 +7,8 @@
     mc:Ignorable="d"
     x:Class="MelbourneModernApps.App">
     <Application.Resources>
+        <ResourceDictionary>
+            <Color x:Key="PageBackground">#F5F4F9</Color>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
