--- a/MelbourneModernApps/App.xaml
+++ b/MelbourneModernApps/App.xaml
@@ -9,6 +9,9 @@
     <Application.Resources>
         <ResourceDictionary>
             <Color x:Key="PageBackground">#F5F4F9</Color>
+            <Style TargetType="ContentPage">
+                <Setter Property="BackgroundColor" Value="{StaticResource PageBackground}"/>
+            </Style>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
