--- a/MelbourneModernApps/Views/NewItemPage.xaml
+++ b/MelbourneModernApps/Views/NewItemPage.xaml
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentPage
+<ContentPage 
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:d="http://xamarin.com/schemas/2014/forms/design"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
+    BackgroundColor="{StaticResource PageBackground}"
     x:Class="MelbourneModernApps.Views.NewItemPage"
     Title="New Item">
     <ContentPage.ToolbarItems>
@@ -31,7 +32,7 @@
                 FontSize="Medium" />
             <Editor
                 Text="{Binding Item.Description}"
-                d:Text="Item description"
+                HeightRequest="200"
                 FontSize="Small"
                 Margin="0" />
         </StackLayout>
