Added MatBlazor and cleaned up detail page

--- a/MelbourneModernApps.BlazorWasm/Pages/FetchData.razor
+++ b/MelbourneModernApps.BlazorWasm/Pages/FetchData.razor
@@ -12,6 +12,8 @@
 else
 {
     <button @onclick="AddPresenter">Add Presenter</button>
+    <MatButton Raised="true" OnClick="AddPresenter">Save</MatButton>
+
     <table class="table">
         <thead>
             <tr>
