--- a/MelbourneModernApps.BlazorWasm/_Imports.razor
+++ b/MelbourneModernApps.BlazorWasm/_Imports.razor
@@ -6,3 +6,4 @@
 @using MelbourneModernApps.BlazorWasm
 @using MelbourneModernApps.BlazorWasm.Shared
 @using MelbourneModernApp.Core.ViewModels
+@using MatBlazor
