--- a/MelbourneModernApps/Views/ItemsPage.xaml
+++ b/MelbourneModernApps/Views/ItemsPage.xaml
@@ -6,7 +6,7 @@
     xmlns:d="http://xamarin.com/schemas/2014/forms/design"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    x:Class="MelbourneModernApps.Views.ItemsPage"
+    x:Class="MelbourneModernApps.Views.PresentersPage"
     Title="{Binding Title}"
     x:Name="BrowseItemsPage">
     <ContentPage.ToolbarItems>
