--- a/MelbourneModernApps.BlazorWasm/Pages/Presenters.razor
+++ b/MelbourneModernApps.BlazorWasm/Pages/Presenters.razor
@@ -22,18 +22,21 @@ else
                 <th>Picture</th>
                 <th>Name</th>
                 <th>Blurb</th>
+                <th>Twitter</th>
+
                 <th></th>
             </tr>
         </thead>
         <tbody>
             @foreach (var presenter in VM.Items)
             {
-                <tr>
-                    <td><img src="@presenter.ImageUrl" class="circle-image" /></td>
-                    <td>@presenter.Name</td>
-                    <td>@presenter.Description</td>
-                    <td><MatIconButton Icon="edit" OnClick="@(() => EditPresenter(presenter))"></MatIconButton></td>
-                </tr>
+            <tr>
+                <td><img src="@presenter.ImageUrl" class="circle-image" /></td>
+                <td>@presenter.Name</td>
+                <td>@presenter.Description</td>
+                <td>@presenter.TwitterHandle</td>
+                <td><MatIconButton Icon="edit" OnClick="@(() => EditPresenter(presenter))"></MatIconButton></td>
+            </tr>
             }
         </tbody>
     </table>
@@ -51,7 +54,7 @@ else
         NavigationManager.NavigateTo("/presenters/detail");
     }
 
-    public void EditPresenter(Item presenter)
+    public void EditPresenter(Presenter presenter)
     {
 
         NavigationManager.NavigateTo($"/presenters/detail/{presenter.Id}");
