fixed bug in blazor presenter detail not navigating back to list

--- a/MelbourneModernApps.BlazorWasm/Pages/PresenterDetailPage.razor
+++ b/MelbourneModernApps.BlazorWasm/Pages/PresenterDetailPage.razor
@@ -52,7 +52,7 @@
         if (saved)
         {
             //navigate
-            NavigationManager.NavigateTo("/fetchdata");
+            NavigationManager.NavigateTo("/presenters");
         }
     }
 
