--- a/MelbourneModernApps/Views/PresentersPage.xaml
+++ b/MelbourneModernApps/Views/PresentersPage.xaml
@@ -13,7 +13,7 @@
     <ContentPage.ToolbarItems>
         <ToolbarItem
             Text="Add"
-            Clicked="AddItem_Clicked" />
+            Command="{Binding OpenPresenterCommand}" />
     </ContentPage.ToolbarItems>
     <RefreshView
         IsRefreshing="{Binding IsBusy, Mode=TwoWay}"
@@ -35,7 +35,8 @@
                         <Grid.GestureRecognizers>
                             <TapGestureRecognizer
                                 NumberOfTapsRequired="1"
-                                Tapped="OnItemSelected">
+                                Command="{Binding BindingContext.OpenPresenterCommand, Source={x:Reference BrowseItemsPage}}"
+                                CommandParameter="{Binding .}">
                             </TapGestureRecognizer>
                         </Grid.GestureRecognizers>
                     </Grid>
